--- a/insurance_claims/seeds/properties.yml
+++ b/insurance_claims/seeds/properties.yml
@@ -24,4 +24,4 @@ seeds:
         Cylinders: DECIMAL #should be integer but downloaded data is as float
       meta:
         source: https://www.kaggle.com/datasets/sidharth178/car-prices-dataset?resource=download
-        note: train.csv
+        note: only using train.csv. Column headers changed to remove spaces.
