--- a/insurance_claims/dbt_project.yml
+++ b/insurance_claims/dbt_project.yml
@@ -26,12 +26,25 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
+
+vars:
+  "dbt_ml:audit_schema": "comp_653_models"
+  "dbt_ml:audit_table": "ml_models"
+on-run-start:
+  - '{% do adapter.create_schema(api.Relation.create(target.project, "audit")) %}'
+  - "{{ dbt_ml.create_model_audit_table() }}"
+
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
   insurance_claims:
     # Config indicated by + and applies to all files under models/example/
+    ml:
+      enabled: true
+      schema: models
+      materialized: model
+      post-hook: "{{ dbt_ml.model_audit() }}"
     +materialized: table
-    pre_processing:
+    feature_transformation:
       +materialized: view
